crates/python_parser/tests/snapshots/valid_syntax@lambda_with_no_parameters.py.snap
---
source: crates/python_parser/tests/fixtures.rs
input_file: crates/python_parser/resources/inline/ok/lambda_with_no_parameters.py
---
## AST

```
Module(
    ModModule {
        range: 0..10,
        body: [
            Expr(
                ExprStmt {
                    range: 0..9,
                    value: Lambda(
                        LambdaExpr {
                            range: 0..9,
                            parameters: None,
                            body: NumberLiteral(
                                NumberLiteralExpr {
                                    range: 8..9,
                                    value: Int(
                                        1,
                                    ),
                                },
                            ),
                        },
                    ),
                },
            ),
        ],
    },
)
```
