crates/python_parser/tests/snapshots/valid_syntax@match_attr_pattern_soft_keyword.py.snap
---
source: crates/python_parser/tests/fixtures.rs
input_file: crates/python_parser/resources/inline/ok/match_attr_pattern_soft_keyword.py
---
## AST

```
Module(
    ModModule {
        range: 0..131,
        body: [
            Match(
                MatchStmt {
                    range: 0..130,
                    subject: Name(
                        NameExpr {
                            range: 6..9,
                            id: Name("foo"),
                            ctx: Load,
                        },
                    ),
                    cases: [
                        MatchCase {
                            range: 15..34,
                            pattern: MatchValue(
                                PatternMatchValue {
                                    range: 20..29,
                                    value: Attribute(
                                        AttributeExpr {
                                            range: 20..29,
                                            value: Name(
                                                NameExpr {
                                                    range: 20..25,
                                                    id: Name("match"),
                                                    ctx: Load,
                                                },
                                            ),
                                            attr: Identifier {
                                                id: Name("bar"),
                                                range: 26..29,
                                            },
                                            ctx: Load,
                                        },
                                    ),
                                },
                            ),
                            guard: None,
                            body: [
                                Expr(
                                    ExprStmt {
                                        range: 31..34,
                                        value: EllipsisLiteral(
                                            EllipsisLiteralExpr {
                                                range: 31..34,
                                            },
                                        ),
                                    },
                                ),
                            ],
                        },
                        MatchCase {
                            range: 39..57,
                            pattern: MatchValue(
                                PatternMatchValue {
                                    range: 44..52,
                                    value: Attribute(
                                        AttributeExpr {
                                            range: 44..52,
                                            value: Name(
                                                NameExpr {
                                                    range: 44..48,
                                                    id: Name("case"),
                                                    ctx: Load,
                                                },
                                            ),
                                            attr: Identifier {
                                                id: Name("bar"),
                                                range: 49..52,
                                            },
                                            ctx: Load,
                                        },
                                    ),
                                },
                            ),
                            guard: None,
                            body: [
                                Expr(
                                    ExprStmt {
                                        range: 54..57,
                                        value: EllipsisLiteral(
                                            EllipsisLiteralExpr {
                                                range: 54..57,
                                            },
                                        ),
                                    },
                                ),
                            ],
                        },
                        MatchCase {
                            range: 62..80,
                            pattern: MatchValue(
                                PatternMatchValue {
                                    range: 67..75,
                                    value: Attribute(
                                        AttributeExpr {
                                            range: 67..75,
                                            value: Name(
                                                NameExpr {
                                                    range: 67..71,
                                                    id: Name("type"),
                                                    ctx: Load,
                                                },
                                            ),
                                            attr: Identifier {
                                                id: Name("bar"),
                                                range: 72..75,
                                            },
                                            ctx: Load,
                                        },
                                    ),
                                },
                            ),
                            guard: None,
                            body: [
                                Expr(
                                    ExprStmt {
                                        range: 77..80,
                                        value: EllipsisLiteral(
                                            EllipsisLiteralExpr {
                                                range: 77..80,
                                            },
                                        ),
                                    },
                                ),
                            ],
                        },
                        MatchCase {
                            range: 85..130,
                            pattern: MatchValue(
                                PatternMatchValue {
                                    range: 90..125,
                                    value: Attribute(
                                        AttributeExpr {
                                            range: 90..125,
                                            value: Attribute(
                                                AttributeExpr {
                                                    range: 90..119,
                                                    value: Attribute(
                                                        AttributeExpr {
                                                            range: 90..114,
                                                            value: Attribute(
                                                                AttributeExpr {
                                                                    range: 90..109,
                                                                    value: Attribute(
                                                                        AttributeExpr {
                                                                            range: 90..105,
                                                                            value: Attribute(
                                                                                AttributeExpr {
                                                                                    range: 90..100,
                                                                                    value: Name(
                                                                                        NameExpr {
                                                                                            range: 90..95,
                                                                                            id: Name("match"),
                                                                                            ctx: Load,
                                                                                        },
                                                                                    ),
                                                                                    attr: Identifier {
                                                                                        id: Name("case"),
                                                                                        range: 96..100,
                                                                                    },
                                                                                    ctx: Load,
                                                                                },
                                                                            ),
                                                                            attr: Identifier {
                                                                                id: Name("type"),
                                                                                range: 101..105,
                                                                            },
                                                                            ctx: Load,
                                                                        },
                                                                    ),
                                                                    attr: Identifier {
                                                                        id: Name("bar"),
                                                                        range: 106..109,
                                                                    },
                                                                    ctx: Load,
                                                                },
                                                            ),
                                                            attr: Identifier {
                                                                id: Name("type"),
                                                                range: 110..114,
                                                            },
                                                            ctx: Load,
                                                        },
                                                    ),
                                                    attr: Identifier {
                                                        id: Name("case"),
                                                        range: 115..119,
                                                    },
                                                    ctx: Load,
                                                },
                                            ),
                                            attr: Identifier {
                                                id: Name("match"),
                                                range: 120..125,
                                            },
                                            ctx: Load,
                                        },
                                    ),
                                },
                            ),
                            guard: None,
                            body: [
                                Expr(
                                    ExprStmt {
                                        range: 127..130,
                                        value: EllipsisLiteral(
                                            EllipsisLiteralExpr {
                                                range: 127..130,
                                            },
                                        ),
                                    },
                                ),
                            ],
                        },
                    ],
                },
            ),
        ],
    },
)
```
